--- a/index.html
+++ b/index.html
@@ -27,28 +27,28 @@
             <p id="para">Image Search Engine</p>
             <h2 >Image Search Engine</h2>
             <p>Just type the keyword in the search box and click on search you will get the images. </p>
-            <a href="/ImageSearchEngine/index.html">Readmore</a>
+            <a href="https://mahatosumit.github.io/ImageSearchEngine/">Readmore</a>
         </div>
         <div class="card">
             <img src="./9.png" >
             <p id="para">To- Do app</p>
             <h2>To- Do app</h2>
             <p>This is the To-Do app design to create a list of daily basis to tasks app.</p>
-            <a href="/To-Do-app/index.html">Readmore</a>
+            <a href="https://mahatosumit.github.io/todo-app/">Readmore</a>
         </div>
         <div class="card">
             <img src="./qr.png"  >
             <p id="para">QR Code Generator</p>
             <h2>QR Code Generator</h2>
             <p>Simply Just type a text or url and click on generate to get QR Code.</p>
-            <a href="/QR Code Generator/index.html">Readmore</a>
+            <a href="https://mahatosumit.github.io/QRCodeGenerator/">Readmore</a>
         </div>
         <div class="card">
             <img src="./7.png">
             <p id="para">Text To Speech </p>
             <h2 >Text To Speech </h2>
             <p>Just type the keyword in the search box and click on listen you will get the sound of the text you entered. </p>
-            <a href="./Text to voice/index.html">Readmore</a>
+            <a href="https://mahatosumit.github.io/TextToSpeech/">Readmore</a>
         </div>
         <div class="card">
             <img src="./8.png">
