--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <p id="para" > Length Converter <p>
             <h2 > Length Converter </h2>
             <p>Just type the number in the  box and click on calculate you will get the result in the side box.</p>
-            <a href="/unit-converter/index.html">Readmore</a>
+            <a href="https://mahatosumit.github.io/Length-converter/">Readmore</a>
         </div>
         
     </div>
