--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </section>
     <footer>
         <div class="text">
-            <span>Created By <a href="index.html" target="_blank">TechX</a> | &#169; 2024
+            <span>Created By <a href="https://mahatosumit.github.io/TaskNest/">TechX</a> | &#169; 2024
                 All Rights Reserved</span>
         </div>
     </footer>
